Adicionando Swagger e inserindo satatus ativo na tabela mesas
