# src/validator/idValidator.js
@@ -1,41 +1,7 @@
 import { param } from 'express-validator'
-
+/*
+   // #swagger.ignore = true
+*/
 export const idValidator = [
-    /*
-    #swagger.requestBody={
-      required: true,
-      content:{
-        "application/json":{
-          schema:{
-            $ref: "#/definitions/DeleteUsuarios"
-          },
-        },
-      },
-    }
-    */
-    /*
-    #swagger.requestBody={
-      required: true,
-      content:{
-        "application/json":{
-          schema:{
-            $ref: "#/definitions/DeleteMesas"
-          },
-        },
-      },
-    }
-  */
- /*
-    #swagger.requestBody={
-      required: true,
-      content:{
-        "application/json":{
-          schema:{
-            $ref: "#/definitions/DeleteItens"
-          },
-        },
-      },
-    }
-  */
-    param('id').isInt().withMessage("Id não foi passado ou não é um número inteiro"),
+  param('id').isInt().withMessage("Id não foi passado ou não é um número inteiro"),
 ]
